# bottom

./: .gitignore  .python-version  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.markdown  README.md  README.rst  bottom.py  mypy.ini  pyproject.toml  requirements.txt  rfc.py  route.py  setup.cfg  setup.py  tox.ini
bottom/: __init__.py  client.py  connection.py  event.py  pack.py  protocol.py  rfc.py  rfc_pack.py  route.py  unpack.py
bottom/plugins/: router.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/_static/: bottom.css  custom.css
docs/_templates/: layout.html
docs/dev/: contributing.rst  development.rst
docs/user/: api.rst  async.rst  client.rst  commands.rst  events.rst  extension.rst  installation.rst  migration.rst
examples/: common.py  echo.py  encryption.py  regex.py  registry.py
examples/migration/: v2.2.0.py  v3.0.0.py
src/bottom/: __init__.py  client.py  core.py  pack.py  protocol.py  unpack.py  util.py
src/bottom/irc/: __init__.py  serialize.py
stubs/: simplex.pyi
tests/: conftest.py  test_client.py  test_connection.py  test_core.py  test_event.py  test_pack.py  test_protocol.py  test_rfc.py  test_rfc_pack.py  test_route.py  test_unpack.py  test_util.py
tests/helpers/: __init__.py  base_classes.py  fns.py
tests/integ/: conftest.py  test_client.py  test_local.py
tests/irc/: conftest.py  test_serialize.py  test_serialize_rfc2812.py
tests/test_plugins/: test_router.py
tests/unit/: conftest.py  test_client.py  test_core.py  test_pack.py  test_protocol.py  test_unpack.py
tests/unit/test_plugins/: test_router.py
